
v0.0.5

* [BGBUILD-65] Allow to specify own repos overriding default repos provided for selected OS

v0.0.4

* [BGBUILD-46] Allow building 32 bit images on 64 bit arch

v0.0.3

* I'm not sure, really

v0.0.2

* First release
