@@ -1,7 +1,7 @@
 
 v0.0.3
 
-* Rebuilding for RPM
+* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
 
 v0.0.2
 
