@@ -1,6 +1,7 @@
 
 v0.0.5
 
+* [BGBUILD-81] post command execution w/ setarch breaks commands which are scripts
 * [BGBUILD-65] Allow to specify own repos overriding default repos provided for selected OS
 
 v0.0.4
